[tool.poetry]
name = "car-models"
version = "0.1.0"
description = ""
authors = ["965311532 <gabriele.armento@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "<=1.3.5"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
